# reversesmith

./: .gitignore  ANALYZE.md  CHANGELOG.md  Cargo.toml  OPTIMIZATION.md  README.md  compare_ensemble.py  config.toml  plot_results.py
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  analysis.md  configuration.md  elements.md  full-example.md  getting-started.md  introduction.md  output-files.md  performance.md  potentials.md
docs/src/algorithms/: potentials-theory.md  rmc.md  scattering.md
docs/src/config/: analysis.md  constraints.md  data.md  epsr.md  potentials.md  rmc.md  sq.md  system.md
src/: analyze.rs  atoms.rs  cells.rs  config.rs  constraints.rs  czt.rs  epsr.rs  io.rs  lib.rs  logging.rs  main.rs  neutron.rs  potential.rs  rdf.rs  rmc.rs  sq.rs  xray.rs
tests/: config_validation.rs  validate_sq.rs
